# fastclick-app

./: index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_info.rs  config.rs  executor.rs  main.rs  models.rs  tray.rs
src/components/: ActionFormModal.tsx  ActionList.tsx  AddActionModal.tsx  CategoryTagManager.tsx  ExecuteModal.tsx  Settings.tsx  Sidebar.tsx
src/hooks/: useTheme.ts
src/services/: storage.ts
src/stores/: appStore.ts  settingsStore.ts
src/styles/: theme.css
src/types/: index.ts  settings.ts
